RESOLVED FIXED224839
REGRESSION(r256107): Text moves around when selecting at https://www.tokyo-sports.co.jp/entame/news/2834187/
https://bugs.webkit.org/show_bug.cgi?id=224839
Summary REGRESSION(r256107): Text moves around when selecting at https://www.tokyo-sp...
alan
Reported 2021-04-20 15:53:58 PDT
Attachments
Patch (5.89 KB, patch)
2021-04-20 15:57 PDT, alan
no flags
Patch (7.86 KB, patch)
2021-04-20 18:57 PDT, alan
no flags
alan
Comment 1 2021-04-20 15:57:42 PDT
Darin Adler
Comment 2 2021-04-20 18:28:04 PDT
Comment on attachment 426606 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=426606&action=review > Source/WebCore/layout/inlineformatting/InlineTextItem.cpp:83 > auto shouldPreseveNewline = TextUtil::shouldPreserveNewline(inlineTextBox); "preseve" > Source/WebCore/layout/inlineformatting/text/TextUtil.h:57 > + static LineBreakIteratorMode lineBreakIteratorMode(LineBreak); Not the biggest fan of a class and file named TextUtil.
alan
Comment 3 2021-04-20 18:39:39 PDT
(In reply to Darin Adler from comment #2) > Comment on attachment 426606 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=426606&action=review > > > Source/WebCore/layout/inlineformatting/InlineTextItem.cpp:83 > > auto shouldPreseveNewline = TextUtil::shouldPreserveNewline(inlineTextBox); > > "preseve" > > > Source/WebCore/layout/inlineformatting/text/TextUtil.h:57 > > + static LineBreakIteratorMode lineBreakIteratorMode(LineBreak); > > Not the biggest fan of a class and file named TextUtil. Me neither. It should have been renamed long time ago. Will take care of it.
alan
Comment 4 2021-04-20 18:57:51 PDT
EWS
Comment 5 2021-04-21 06:36:41 PDT
Committed r276357 (236835@main): <https://commits.webkit.org/236835@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426629 [details].
Note You need to log in before you can comment on or make changes to this bug.