Source/WebCore/layout/inlineformatting/text/TextUtil.cpp
@@ -152,6 +152,24 @@ bool TextUtil::shouldPreserveNewline(const Box& layoutBox)
     return whitespace == WhiteSpace::Pre || whitespace == WhiteSpace::PreWrap || whitespace == WhiteSpace::BreakSpaces || whitespace == WhiteSpace::PreLine; 
 }
 
+LineBreakIteratorMode TextUtil::lineBreakIteratorMode(LineBreak lineBreak)
+{
+    switch (lineBreak) {
+    case LineBreak::Auto:
+    case LineBreak::AfterWhiteSpace:
+    case LineBreak::Anywhere:
+        return LineBreakIteratorMode::Default;
+    case LineBreak::Loose:
+        return LineBreakIteratorMode::Loose;
+    case LineBreak::Normal:
+        return LineBreakIteratorMode::Normal;
+    case LineBreak::Strict:
+        return LineBreakIteratorMode::Strict;
+    }
+    ASSERT_NOT_REACHED();
+    return LineBreakIteratorMode::Default;
+}
+
 }
 }
 #endif
